<resources>
    <string name="app_name">Learn&amp;Fitness</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_account_box">Profile</string>

    <!-- MeFragment -->
    <string name="hello_blank_fragment">Hello</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="UserName">User Name</string>
    <string name="Age">Age</string>
    <string name="Gender">Gender</string>
    <string name="Experience">Experience</string>
    <string name="MyVideo">My Video</string>
    <string name="MyStory">My Story</string>
    <string name="CalculateBMI">Calculate BMI</string>
    <string name="SignIn">Sign In</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_my_video">MyVideoActivity</string>
    <string name="title_activity_my_story">MyStoryActivity</string>
    <string name="title_activity_calculate_bmi">CalculateBMIActivity</string>
    <string name="SelectProfilePicture">Select Profile Picture</string>

    <!--Edit Profile-->
    <string name="editTextName">Name</string>
    <string name="editTextAge">Age</string>
    <string name="radioGroupGender">Gender</string>
    <string name="radioButtonMale">Male</string>
    <string name="radioButtonFemale">Female</string>
    <string-array name="spinnerExperience">
        <item>Select</item>
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>
    <string name="SelectBefore">Select Image</string>
    <string name="SelectAfter">Select Image</string>

    <!--BMI-->
    <string name="editTextWeight">Weight (kg)</string>
    <string name="editTextHeight">Height (cm)</string>
    <string name="buttonCalculate">Calculate</string>

    <string name="login">Login</string>
    <string name="endurance">Endurance exercises</string>
    <string name="strength">Strength exercises</string>
    <string name="balance">Balance exercises</string>
    <string name="flexibility">Flexibility exercises</string>
    <string name="VideoTitle">Video Title</string>
    <string name="VideoCategories">Video Categories</string>
    <string name="Save">Save</string>

    <string name="update_user_url">http://procaryotic-assista.000webhostapp.com/updateUser.php</string>
    <string name="insert_user_url">http://procaryotic-assista.000webhostapp.com/insertUser.php</string>
    <string name="insert_story_url">http://procaryotic-assista.000webhostapp.com/insertStory.php</string>
    <string name="update_story_url">http://procaryotic-assista.000webhostapp.com/updateStory.php</string>
    <string name="insert_video_url">http://procaryotic-assista.000webhostapp.com/insertVideo.php</string>
    <string name="get_video_url">http://procaryotic-assista.000webhostapp.com/getVideo.php</string>
    <string name="get_myvideo_url">http://procaryotic-assista.000webhostapp.com/getMyVideo.php</string>
    <string name="update_video_url">http://procaryotic-assista.000webhostapp.com/updateVideo.php</string>


    <string name="title_activity_upload_video">UploadVideoActivity</string>
    <string name="ChooseVideo">Choose Video</string>
    <string name="UploadVideo">Upload Video</string>
    <string name="buttonViewMyFav">View My Favorite Video</string>
    <string name="buttonAddFav">Add Favorite Video</string>
    <string name="title_activity_my_fav">MyFavActivity</string>
    <string name="title_activity_categories">CategoriesActivity</string>
</resources>
