<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_apps_black_24dp"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_bmi"
        android:icon="@drawable/ic_exposure_black_24dp"
        android:title="@string/title_activity_calculate_bmi" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_account_box"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_account_box" />

</menu>
